[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/images/Z8FreedomFighter_Magma_110x110.png" type="Texture" id=1]
[ext_resource path="res://components/Enemy.gd" type="Script" id=2]

[node name="Enemy" type="Area2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Aim" type="Position2D" parent="."]
position = Vector2( 256, 0 )

[node name="ColorRect" type="ColorRect" parent="Aim"]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( 32, 24, -32, 24, 0, -24 )

[node name="BeamPosition" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[node name="MovementTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="RotationTween" type="Tween" parent="."]

[connection signal="tween_completed" from="MovementTween" to="." method="_arrived_at_destination"]
